--- a/spotify/index.html
+++ b/spotify/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="bpl-psMbYLSPiati5NS9umTHZmjRydQeLNOmZpwJ73I" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify-Web Player: Music for everyone</title>
     <link rel="stylesheet" href="style.css">
